fix(toolbar): fixed the toolbar spacing for iOS with platform-cordova
Added some tests for modals with a toolbar, only target the first
toolbar in a menu or modal so the user can have multiple toolbars
without skewing them. References #469

--- a/ionic/platform/cordova-ios.scss
+++ b/ionic/platform/cordova-ios.scss
@@ -9,14 +9,20 @@ $cordova-ios-toolbar-padding:    2rem   !default;
 
   ion-navbar-section,
   ion-navbar,
-  ion-menu > ion-toolbar {
+  ion-menu > ion-toolbar:first-child,
+  ion-menu > ion-toolbar:first-child ion-title,
+  ion-page.modal > ion-toolbar:first-child,
+  ion-page.modal > ion-toolbar:first-child ion-title, {
     min-height: $toolbar-ios-height + $cordova-ios-toolbar-padding;
     height: $toolbar-ios-height + $cordova-ios-toolbar-padding;
   }
 
   ion-navbar,
   ion-navbar ion-title,
-  ion-menu > ion-toolbar {
+  ion-menu > ion-toolbar:first-child,
+  ion-menu > ion-toolbar:first-child ion-title,
+  ion-page.modal > ion-toolbar:first-child,
+  ion-page.modal > ion-toolbar:first-child ion-title, {
     padding-top: $cordova-ios-toolbar-padding;
   }
 
